优化用户页面样式

--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,4 +1,4 @@
-<div style="padding-top: 5px;padding-left: 10px;padding-right: 10px">
+<div style="width: 400px;text-align: center;">
   <% if flash[:success] %>
       <div class="alert alert-success">
         <button class="close" data-dismiss="alert">×</button>
