--- a/app/views/administer/dashboard/users.html.erb
+++ b/app/views/administer/dashboard/users.html.erb
@@ -50,59 +50,61 @@
                   <% elsif user.role =='fucker'%>
                     label-warning
                   <% elsif user.role =='looker'%>
-                    label-default
+                    label-success
                   <% end %>
                   " style="font-size: 16px">
                         <i class="fa fa-drupal"></i>
                         <%= display_role user %>
                       </span>
                       <br><br>
-                      <span class="label label-info" style="font-size: 16px">
-                        <i class="fa fa-cc-amex"></i>
+                      <span class="label label-default" style="font-size: 16px">
+                        <i class="fa fa-user-secret"></i>
                         <%= display_name user %>
                       </span>
                     </td>
                     <td style="text-align: left">
                       <br>
-                      <span class="label label-primary" style="font-size: 16px">
+                      <span class="label label-default" style="font-size: 16px">
                         <i class="fa fa-map-marker"></i>
                         <%= user.location %>
                       </span>
                       <br><br>
-                      <span class="label label-success" style="font-size: 16px">
+                      <span class="label label-default" style="font-size: 16px">
                         <i class="fa fa-envelope"></i>
                         <%= user.email %>
                       </span>
                     </td>
                     <td>
-                      <% if user.role == 'looker'%>
-                          <a href="<%= role_set_path(user_id:user.id, role:'admin') %>" data-confirm="将用户添加为管理员" class="btn btn-danger">
-                            <i class="glyphicon glyphicon-plus"></i>
-                            <span>管理权限</span>
-                          </a><br><br>
-                          <a href="<%= role_set_path(user_id:user.id, role:'fucker') %>" data-confirm="将用户添加毛片观看权限" class="btn btn-warning">
-                            <i class="glyphicon glyphicon-eye-open"></i>
-                            <span>毛片大师</span>
-                          </a>
-                      <% elsif user.role == 'fucker' %>
-                          <a href="<%= role_set_path(user_id:user.id, role:'admin') %>" data-confirm="将用户添加为管理员" class="btn btn-danger">
-                            <i class="glyphicon glyphicon-plus"></i>
-                            <span>管理权限</span>
-                          </a><br><br>
-                          <a href="<%= role_set_path(user_id:user.id, role:'looker') %>" data-confirm="将用户添加视频浏览权限" class="btn btn-success">
-                            <i class="glyphicon glyphicon-eye-open"></i>
-                            <span>视频浏览</span>
-                          </a>
-                      <% elsif user.role == 'admin' %>
-                          <a href="<%= role_set_path(user_id:user.id, role:'fucker') %>" data-confirm="将用户添加毛片观看权限" class="btn btn-warning">
-                            <i class="glyphicon glyphicon-eye-open"></i>
-                            <span>毛片大师</span>
-                          </a><br><br>
-                          <a href="<%= role_set_path(user_id:user.id, role:'looker') %>" data-confirm="将用户添加视频浏览权限" class="btn btn-success">
-                              <i class="glyphicon glyphicon-eye-open"></i>
-                              <span>视频浏览</span>
-                          </a>
-                      <% end %>
+                      <br>
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-default btn-flat"><i class="fa fa-delicious"></i>&nbsp;用户权限</button>
+                        <button type="button" class="btn btn-default btn-flat dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                          <span class="caret"></span>
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                          <li>
+                            <a href="<%= role_set_path(user_id:user.id, role:'looker') %>" data-confirm="将用户添加视频浏览权限">
+                              <i class="fa fa-drupal"></i>
+                              <span>小盆友</span>
+                            </a>
+                          </li>
+                          <li class="divider"></li>
+                          <li>
+                            <a href="<%= role_set_path(user_id:user.id, role:'fucker') %>" data-confirm="将用户添加毛片观看权限">
+                              <i class="fa fa-gavel"></i>
+                              <span>鉴黄师</span>
+                            </a>
+                          </li>
+                          <li class="divider"></li>
+                          <li>
+                            <a href="<%= role_set_path(user_id:user.id, role:'admin') %>" data-confirm="将用户添加为管理员">
+                              <i class="fa fa-car"></i>
+                              <span>老司机</span>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
                     </td>
                   </tr>
                 <% end %>
