--- a/app/views/welcome/playing.html.erb
+++ b/app/views/welcome/playing.html.erb
@@ -1,6 +1,6 @@
 <%= content_for(:title, @video.title + ' | Koogle') %>
 <%= render partial: 'shared/og_meta', video:@video %>
-<%= javascript_include_tag 'video_player' %>
+<script type="text/javascript" src="//7xjfim.com2.z0.glb.qiniucdn.com/Iva.js"></script>
 <div class="container">
   <div class="grid">
     <div class="display">
