--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -3,14 +3,15 @@
 <head>
   <title><%= content_for?(:title) ? yield(:title) : '在沉默中爆发 | Koogle' %></title>
   <meta charset="utf-8">
+  <meta http-equiv="cache-control" content="no-cache"/>
   <!-- 响应式布局 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= content_for?(:meta)? yield(:meta) :'' %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-  <%= stylesheet_link_tag  'front', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </head>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= stylesheet_link_tag  'front', media: 'all', 'data-turbolinks-track' => true %>
 <body>
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
