--- a/app/views/layouts/just_admin_sign.html.erb
+++ b/app/views/layouts/just_admin_sign.html.erb
@@ -12,6 +12,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
   <style type="text/css">
       .jqstooltip { position: absolute;left: 0px;top: 0px;visibility: hidden;background: rgb(0, 0, 0) trans parent;background-color: rgba(0,0,0,0.6);
           filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
@@ -21,9 +22,9 @@
   </style>
 </head>
 <body class="register-page">
-  <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'LTE_admin/lte_admin', 'data-turbolinks-track' => true %>
   <div>
     <%= yield %>
   </div>
 </body>
+<%= javascript_include_tag 'LTE_admin/lte_admin', 'data-turbolinks-track' => true %>
+</html>
