--- a/app/views/layouts/front_end.html.erb
+++ b/app/views/layouts/front_end.html.erb
@@ -10,6 +10,10 @@
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   <%= stylesheet_link_tag  'front', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <% if action_name =='index' %>
+    <%= javascript_include_tag 'cute.slider','cute.transitions.all','data-turbolinks-track' => true %>
+  <% end %>
 </head>
 <body>
 <!--[if lt IE 10]>
@@ -87,7 +91,6 @@
   <%= render :partial => 'layouts/footer_menu' %>
 </div>
 </body>
-<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <script>
     $(document).on('page:fetch',   function() { NProgress.start(); });
     $(document).on('page:change',  function() { NProgress.done(); });
