--- a/app/views/welcome/playing.html.erb
+++ b/app/views/welcome/playing.html.erb
@@ -55,6 +55,7 @@
 </div>
 <!--登录浮层-->
 <%= render partial: 'shared/user_login' %>
+<%= javascript_include_tag 'videojj', 'data-turbolinks-track' => true %>
 <script type="text/javascript" >
   var ivaInstance = new Iva('playerCnt', {
     appkey: '4JAun1rRl',
