优化优酷视频评论

--- a/app/views/layouts/front_end.html.erb
+++ b/app/views/layouts/front_end.html.erb
@@ -12,7 +12,7 @@
   <%= stylesheet_link_tag  'front', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <% if action_name =='index' %>
-    <%= javascript_include_tag 'cute.slider','cute.transitions.all','data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'cute.slider','cute.transitions.all' %>
   <% end %>
 </head>
 <body>
