--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -10,7 +10,7 @@
           <span class="v-time"><%= @video['published']%></span></p>
       </div>
       <div class="player">
-        <div>
+        <div style="padding-left: 5px;padding-top: 5px">
           <div id="playerCnt" class="video_player"></div>
         </div>
       </div>
