--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
       .main-wechat{ padding-top: 45px !important}
       .done, .alert { position: static !important}
   </style>
+  <style type="text/css">
+    body{
+      cursor: 'http://7u2lac.com1.z0.glb.clouddn.com/lol_cursor.cur';
+      font-family: "Alright Sans LP","Comic Sans MS","Helvetica","幼圆",sans-serif;
+    }
+    a { cursor: 'http://7u2lac.com1.z0.glb.clouddn.com/lol_link.cur' }
+  </style>
 </head>
 <body class="sessions-new ">
 <!--[if lt IE 7]>
