--- a/app/assets/stylesheets/login_animation.scss
+++ b/app/assets/stylesheets/login_animation.scss
@@ -3,11 +3,13 @@
   margin: 0;
   padding: 0;
 }
-body{
-  font-family: "Alright Sans LP","Comic Sans MS","Helvetica","幼圆",sans-serif;
-  cursor: url('http://7u2lac.com1.z0.glb.clouddn.com/lol_cursor.cur'), default;
-  a:hover{
-    cursor: url('http://7u2lac.com1.z0.glb.clouddn.com/lol_link.cur'), default;
+@media (min-width: 970px) {
+  body{
+    font-family: "Alright Sans LP","Comic Sans MS","Helvetica","幼圆",sans-serif;
+    cursor: url('http://7u2lac.com1.z0.glb.clouddn.com/lol_cursor.cur'), default;
+    a:hover{
+      cursor: url('http://7u2lac.com1.z0.glb.clouddn.com/lol_link.cur'), default;
+    }
   }
 }
 .cont{
