优化用户密码管理

--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>您在 轩 网站申请修改密码，请点击一下链接进行相应的操作</p>
 
-<p><%= link_to '修改密码', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to '修改密码', reset_password_url(reset_password_token: @token) %></p>
 
 <p>如果不是您本人操作，请你及时更改账户信息，有可能账户信息邮件泄露</p>
 <p>如果更改密码失效，您可以重新申请修改密码，可能是邮件已经失效！</p>
