--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -53,7 +53,7 @@
     $('.load-more').attr('onclick',"load_channel_more ("+ num +","+ channel +", "+ local +")");
     $('.load-more').html("<h4>MORE「 "+ local + "」</h4>");
     $('.load-menu').css('display','none');
-    $('.processbar').css('display','block');
+    $('.processbar').css({'display':'block','width':'0%'});
     $.get('/videos/get_channel_more',{page: page, column:channel}, function(data){
       var i = 0;
       var timer = setInterval(function(){
@@ -65,7 +65,7 @@
       },5);
       setTimeout(function(){
         $('.load-menu').css('display','block');
-        $('.processbar').css({'display':'none','width':'0%'});
+        $('.processbar').css('display','none');
         if(data != ''){
           $('.video-list').append(data);
         }else{
