--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,7 +50,7 @@
     $('.load-more').attr('onclick',"load_index_more ("+ num +","+ local +")");
     $('.load-more').html("<h4>MORE「 "+ local + "」</h4>");
     $('.load-menu').css('display','none');
-    $('.processbar').css('display','block');
+    $('.processbar').css({'display':'block','width':'0%'});
     $.get('/videos/get_index_more',{page: page}, function(data){
       var i = 0;
       var timer = setInterval(function(){
@@ -62,7 +62,7 @@
       },5);
       setTimeout(function(){
         $('.load-menu').css('display','block');
-        $('.processbar').css({'display':'none','width':'0%'});
+        $('.processbar').css('display','none');
         if(data != ''){
           $('.video-list').append(data);
         }else{
